# open_critter

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: control.yaml  trajectory_control.yaml
gym/pybulletgym/envs/assets/mjcf/: ant.xml
include/open_critter/: protocol.h
launch/: description.launch  robot.launch  simulation.launch
meshes/: cam_holder.stl  coxa_left.stl  coxa_rear.stl  femur.stl  hub_holder.stl  pi_holder.stl  tibia_left.stl  tibia_right.stl
meshes/collada/: body.dae  coxa_front.dae  coxa_rear.dae  femur.dae  servo.dae  tibia_front.dae
raspi/: make_server.sh  protocol.h  servo_server.cpp  test_client.c
raspi/PCA9685/: Makefile
sketch/: README.txt  open_critter.skp
src/: gait_controller.cpp  robot_bridge.cpp
tensorflow/: quadruped_env.py  quadruped_model.py
tensorflow/model/: checkpoint  model.ckpt.data-00000-of-00001  model.ckpt.index
urdf/: critter.urdf  critter.xacro  leg.xacro
worlds/: empty.world  practice.world
xacro/: critter.xacro  leg.xacro
